--- a/source (react)/src/components/login-signup.css
+++ b/source (react)/src/components/login-signup.css
@@ -1,12 +1,3 @@
-/* Colors */
-/*
-dark blue: #476A6F
-light blue: #258EA6
-dark green: #519E8A
-medium green: #7EB09B
-light green: #A3C4BC
-*/
-
 .wrapper {
   height: 100vh;
   width: 100%;
@@ -14,7 +5,7 @@ light green: #A3C4BC
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: #83aab3;
+  background-color: #9fa5a7;
 }
 
 .form-wrapper {
